--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=MB85_FRAM
 version=1.0.0
-author=SV-Zanshin
-maintainer=SV-Zanshin <Zanshin_Github@sv-zanshin.com>
+author=https://github.com/SV-Zanshin
+maintainer=https://github.com/SV-Zanshin
 sentence=Read and Write to the Fujitsu FRAM devices in the MB85 Family of memories
 paragraph=Read and Write to the Fujitsu FRAM devices in the MB85 Family of memories
 category=Device Control
