Changed ownership from "SV-Zanshin" to "Zanduino"
Changed all internal URL references

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 ########################################################################
-# This file defines which file types are to be ignroed and skipped by  #
+# This file defines which file types are to be ignored and skipped by  #
 # git so that they are not transferred and committed.                  #
 #                                                                      #
-# Date       Author                        Comments                    #
-# ========== ============================= =========================== #
-# 2019-01-19 https://github.com/SV-Zanshin Ignores for Doxygen         #
-# 2018-09-22 https://github.com/SV-Zanshin Ignores for MS VS 2017      #
-# 2018-06-24 https://github.com/SV-Zanshin Changed file                #
+# Date       Author     Comments                                       #
+# ========== ========== ============================================== #
+# 2019-01-19 SV-Zanshin Ignores for Doxygen                            #
+# 2018-09-22 SV-Zanshin Ignores for MS VS 2017                         #
+# 2018-06-24 SV-Zanshin Changed file                                   #
 #                                                                      #
 ########################################################################
 
