--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=MB85_FRAM
 version=1.0.6
-author=https://github.com/SV-Zanshin
-maintainer=https://github.com/SV-Zanshin
+author=Arnd <Zanshin_Github@sv-zanshin.com>
+maintainer=Arnd <Zanshin_Github@sv-zanshin.com>
 sentence=Read and Write to the Fujitsu FRAM devices in the MB85 Family of memories
 paragraph=Read and Write to the Fujitsu FRAM devices in the MB85 Family of memories
 category=Device Control
-url=https://github.com/SV-Zanshin/MB85_FRAM
+url=https://github.com/Zanduino/MB85_FRAM
 architectures=*
