Changed links to reflect new "Zanduino" repository location

--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=MB85_FRAM
 version=1.0.7
-author=Arnd <Zanshin_Github@sv-zanshin.com>
-maintainer=Arnd <Zanshin_Github@sv-zanshin.com>
+author=Arnd <Arnd@Zanduino.Com>
+maintainer=Arnd <Arnd@Zanduino.Com>
 sentence=Read and Write to the Fujitsu FRAM devices in the MB85 Family of memories
 paragraph=Read and Write to the Fujitsu FRAM devices in the MB85 Family of memories
 category=Device Control
